--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                     <div class="col-sm-6 col-md-4">
                         <!-- fun-fact -->
                         <div class="fun-fact">
-                            <i class="fa fa-smile-o"></i>
-                            <h4>I love to be involved in a lot of student activties. I was a part of few clubs and committees. Somehow I enjoy it.</h4>
+                            <i class="fa fa-rss"></i>
+                            <h4>I blog <a href= "vineetreddy.wordpress.com" style= "color: red">here</a> and <a href="pseudorandomshit.quora.com" style="color: red">here</a>.</h4>
                         </div>
                         <!-- fun-fact -->
                     </div>
