--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <!-- fun-fact -->
                         <div class="fun-fact">
                             <i class="fa fa-rss"></i>
-                            <h4>I blog <a href= "vineetreddy.wordpress.com" style= "color: red">here</a> and <a href="pseudorandomshit.quora.com" style="color: red">here</a>.</h4>
+                            <h4>I blog <a href= "https://vineetreddy.wordpress.com" style= "color: red">here</a> and <a href="https://pseudorandomshit.quora.com" style="color: red">here</a>.</h4>
                         </div>
                         <!-- fun-fact -->
                     </div>
