Correccted linux desc

--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                         <div class="service color3">
                             <i class="fa fa-linux"></i>
                             <h4>Linux</h4>
-                            <p>I love studying constitutional law! If you ask me about a case I've studied, then you've
-                            made a mistake because I won't shut up until you're just as excited as I am.</p>
+                            <p>I love Linux. I fiddled around Device Drivers for about a few months now.</p>
                         </div>
                         <!-- service -->
                     </div>
