Updated the site

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="The personal website, portfolio and blog of Rajula Vineet Reddy: student, developer, open source enthusiast, and tech geek.
+    <meta name="description" content="The personal website, portfolio and blog of Rajula Vineet Reddy: open source, systems, humanity, photography
 ">
-    <meta name="keywords" content="Rajula Vineet Reddy, web dev, web developer, rajula96reddy, portfolio">
+    <meta name="keywords" content="Rajula Vineet Reddy, SRE, Kubernetes, developer, rajula96reddy, portfolio, Docker, Rajula">
     <meta name="author" content="Rajula Vineet Reddy">
 
     <!-- <meta name="google-site-verification" content="J1I2enqCVWPWxLX82JE84giuntMY1SztQxGovPSBLc4"> -->
@@ -62,7 +62,7 @@
     <!-- HEADER -->
     <header class="header">
         <h1>Rajula Vineet Reddy</h1>
-        <p>student, developer, open source enthusiast, tech geek</p>
+        <p>open source, systems, humanity, photography</p>
 
         <!-- NAV MENU -->
         <ul class="vs-nav">
@@ -103,17 +103,17 @@
                                 Hey! I love
                                 <span class="rotate-words">
                                     <span>programming.</span>
-                                    <span>technology.</span>
+                                    <span>systems.</span>
                                     <span>open source.</span>
-                                    <span>hardware.</span>
-                                    <span>Pharo and Python.</span>
-                                    <span>Movies.</span>
-                                    <span>TV Shows.</span>
+                                    <span>K8s.</span>
+                                    <span>photography.</span>
+                                    <span>binging.</span>
+                                    <span>travelling.</span>
                                 </span>
                                 <br>
-                                I live in Bangalore, India.
+                                I am an ambivert, philantropist & overthinker of all. Currently battling 'quarter life crisis'.
                                 <br>
-                                I'm always looking for awesome projects to work on or new opportunities to add to my resume.
+                                I currently live in Bangalore, India.
                             </h2>
                         </div>
                         <!-- intro -->
@@ -127,11 +127,11 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-3">
                         <!-- service -->
-                        <div class="service color1">
-                            <i class="fa fa-desktop"></i>
-                            <h4>Web Development</h4>
-                            <p>I love making web sites! I mostly build using ruby on rails. And I am more of
-                              a backend guy. What's a website with just a good looking interface? :P </p>
+                        <div class="service color5">
+                            <i class="fa fa-leanpub"></i>
+                            <h4>Learning</h4>
+                            <p> I am quite inquisitive. I love learning & trying out new stuff.
+                            </p>
                         </div>
                         <!-- service -->
                     </div>
@@ -142,28 +142,27 @@
                             <i class="fa fa-code"></i>
                             <h4>Programming</h4>
                             <p> Alongside building websites I also love to do programming.
-                            I love to program in Pharo & Python. I build cool things now and then. </p>
+                            I love to program in Pharo, Python & Golang. I build cool things now and then. </p>
                         </div>
                         <!-- service -->
                     </div>
 
                     <div class="col-sm-6 col-md-3">
-                        <!-- service -->
-                        <div class="service color2">
-                            <i class="fa fa-microchip"></i>
-                            <h4>Hardware</h4>
-                            <p>Unlike most, I like to make my hands dirty with hardware besides having a zeal for software.
-                              And IoT makes the combination of hardware and software more interesting. Raspberry Pi is my present love. </p>
-                        </div>
-                        <!-- service -->
+                            <!-- service -->
+                            <div class="service color1">
+                                <i class="fa fa-globe"></i>
+                                <h4>Travelling</h4>
+                                <p> I love to travel. I have been to 3 new countries so far. I have tried amazing cuisines and met wonderful people</p>
+                            </div>
+                            <!-- service -->
                     </div>
 
                     <div class="col-sm-6 col-md-3">
                         <!-- service -->
                         <div class="service color3">
                             <i class="fa fa-linux"></i>
-                            <h4>Linux</h4>
-                            <p>I love Linux. I fiddled around Device Drivers for about a few months now.</p>
+                            <h4>Systems</h4>
+                            <p>I love working with large complex systems. I consider myself as a good troubleshooter. Linux is ♥️.</p>
                         </div>
                         <!-- service -->
                     </div>
@@ -174,8 +173,8 @@
 
                 <!-- FUN FACT -->
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <!-- fun-fact -->
+                    <div class="col-sm-6 col-md-3">
+                    <!-- fun-fact -->
                         <div class="fun-fact">
                             <i class="fa fa-cutlery"></i>
                             <h4> I love pizza and biryani! I know. Who doesn't?</h4>
@@ -183,20 +182,29 @@
                         <!-- fun-fact -->
                     </div>
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-3">
                         <!-- fun-fact -->
                         <div class="fun-fact">
                             <i class="fa fa-quote-left"></i>
-                            <h4> I am called with various names at various places. So, next time 'look closer' to find me</h4>
+                            <h4> I am called by various names at various places. So, next time 'look closer' to find me</h4>
                         </div>
                         <!-- fun-fact -->
                     </div>
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-3">
                         <!-- fun-fact -->
                         <div class="fun-fact">
                             <i class="fa fa-rss"></i>
-                            <h4>I blog <a href= "https://vineetreddy.wordpress.com" style= "color: red">here</a> and <a href="https://pseudorandomshit.quora.com" style="color: red">here</a>.</h4>
+                            <h4>I blog <a href= "https://vineetreddy.wordpress.com" style= "color: red">here</a> and <a href="https://pseudorandomshit.quora.com" style="color: red">here</a></h4>
+                        </div>
+                        <!-- fun-fact -->
+                    </div>
+                    
+                    <div class="col-sm-6 col-md-3">
+                        <!-- fun-fact -->
+                        <div class="fun-fact">
+                            <i class="fa fa-quote-left"></i>
+                            <h4> "Never forget that fear is but the precursor to valour, that to strive and triumph in the face of fear, is what is means to be a hero!!" - Blinky</h4>
                         </div>
                         <!-- fun-fact -->
                     </div>
@@ -205,7 +213,7 @@
             </div>
 
             <div class="footer-notes" style="text-align: center">
-                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 125%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
+                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 75%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
                        codeinpink</a></strong></p>
             </div>
         </section>
@@ -347,7 +355,7 @@
                 <!-- row -->
             </div>
             <div class="footer-notes" style="text-align: center">
-                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 125%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
+                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 75%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
                        codeinpink</a></strong></p>
             </div>
         </section>
@@ -414,14 +422,14 @@
                        <div class="timeline">
                             <h2><i class="fa fa-graduation-cap"></i>EDUCATION HISTORY</h2>
 
-                            <div class="event current">
-                                <span class="date">2014 - 2019</span>
+                            <div class="event">
+                                <span class="date">2014-'19</span>
 
                                 <h4> Computer Science Engineering <small>(IMTech)</small></h4>
 
 
                                 <h5>International Institute of Information Technology Bangalore</h5>
-                                <p><p>I have recently graduated with Integrated Masters in Technology from IIITB</p>
+                                <p><p>I have graduated with Integrated Masters in Technology from IIITB in the summer of 2019. I was also the recipient of Institute Gold Medal for Contribution to IIITB Community life</p>
 </p>
                             </div>
 
@@ -467,7 +475,7 @@
                                 <li>Matlab<span>*</span></li>
                                 </ul>
 
-                            <h3>Software</h3>
+                            <h3>Editing</h3>
                             <ul class="list-inline skill-list">
                               <li>Gimp<span>*</span></li>
                               <li>Kden Live<span>*</span></li>
@@ -507,14 +515,18 @@
                             </ul> -->
                             <!-- Extra Curricular -->
                             <!-- Talks/Presentations -->
-                            <!-- <h2 class="section-title"><span><i class="icon-mic"></i>TALKS/PRESENTATIONS</span></h2>
-                            <ul style="list-style: none;">
+                            <h2 class="section-title"><span><i class="icon-mic"></i>TALKS/PRESENTATIONS</span></h2>
+                            <ul>
 
-                                <li>"Django Unchained" <span class="pull-right">July 2016</span><br>
-                                    <span class="alt-description">ADTRAN Lightning Tech Talk</span>
+                                <li>"Kubernetes on s390x" <span class="pull-right">October 2018</span><br>
+                                    <span>Presented my <a href="https://osseu18.sched.com/speaker/rajula96reddy" style= "color: red"> work </a>  on Kubernetes on s390x at the Open Source Summit Europe 2018</span>
                                 </li>
 
-                            </ul> -->
+                                <li>"Kubernetes Operators" <span class="pull-right">February 2020</span><br>
+                                    <span>Gave a talk on <a href="https://bit.ly/2T7arVa" style= "color: red"> k8s operators </a>  at the CNCF Hyderabad meetup February 2020</span>
+                                </li>
+
+                            </ul>
                             <!-- Talks/Presentations -->
 
                             <!-- Planning to Learn -->
@@ -541,7 +553,7 @@
             </div>
             <!-- CONTENT -->
             <div class="footer-notes" style="text-align: center">
-                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 125%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
+                    <p style="position: relative; bottom: 0; width:100%;text-align: center"> <strong style="font-size: 75%;"> Inspired and Forked from <a href="https://codeinpink.github.io" style="color: #1AA6B7">
                        codeinpink</a></strong></p>
             </div>
         </section>
